--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "c:\\Users\\railima\\Downloads\\postgresql-42.3.1.jar"
+        "c:\\Users\\railima\\Downloads\\postgresql-42.3.1.jar",
+        "c:\\Users\\railima\\Downloads\\mchange-commons-java-0.2.15.jar",
+        "c:\\Users\\railima\\Downloads\\c3p0-0.9.5.4.jar"
     ]
 }
